# Orchestra

./: .dockerignore  .gitignore  Dockerfile  Pulumi.dev.yaml  Pulumi.yaml  README.md  SETUP.md  build_and_rollout.sh  copy_workshop.sql  diagram.uml  do_delete.py  pyproject.toml
.github/workflows/: codeql-analysis.yml  dependencies.yml  sphinx.yaml
alembic/: env.py
alembic/versions/: 8835696ccc35_initial.py  948d85570ae5_expanded_schema.py  97e1b61fb3bd_refactor_instances.py  cffcab00c8e9_add_creation_timestable_to_workshop.py  fc3ffd54d4de_add_name_to_instances.py
docs/: arch_diagram.py
docs/source/: conf.py  index.rst  technical.rst
helm/: README
helm/workshop-orchestra/: Chart.yaml  values.yaml
helm/workshop-orchestra/charts/: grafana-6.8.1.tgz  prometheus-13.8.0.tgz
helm/workshop-orchestra/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/workshop-orchestra/templates/tests/: test-connection.yaml
kubernetes_deploy/: deployment.yaml  ingress.yaml  orchestra_istio.yaml  rbac.yaml  redirects_for_old.yaml  service.yaml
kubernetes_deploy/keycloak/: authen.yaml.example  keycloak.yaml  keycloak_istio.yaml
traefik/: values.yaml
workshop_orchestra/: api.py  config.py  db.py  description.py  kube_utils.py  security.py
workshop_orchestra/pulumi/: __main__.py
workshop_orchestra/templates/: checklogin.html  home.html  login_template.html  new_instance.html  start.html
