[tool.poetry]
name = "workshop_orchestrator"
version = "0.1.0"
description = "Kubernetes, API, and docker images for complete workshop orchestration"
authors = ["Sean Davis <seandavi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
kubernetes = "^11.0.0"
click = "^7.1.2"
fastapi = "^0.60.0"
databases = "^0.3.2"
asyncpg = "^0.20.1"
uvicorn = "^0.11.6"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
