[tool.poetry]
name = "workshop_orchestra"
version = "0.1.0"
description = "Kubernetes, API, and docker images for complete workshop orchestration"
authors = ["Sean Davis <seandavi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
kubernetes = "^11.0.0"
click = "^7.1.2"
fastapi = "^0.60.0"
databases = "^0.3.2"
asyncpg = "^0.20.1"
uvicorn = "^0.11.6"
jinja2 = "^2.11.2"
itsdangerous = "^1.1.0"
asyncio = "^3.4.3"
starlette_prometheus = "^0.7.0"
kubernetes_asyncio = "^11.3.0"
graphene = "^2.1.8"
aiohttp-graphql = "^1.1.0"
tartiflette-asgi = "^0.9.0"
tartiflette-aiohttp = "^1.3.1"
typesystem = "^0.2.4"
Authlib = "^0.15.2"
httpx = "^0.16.1"
keycloak-client = {extras = ["extensions"], version = "^0.15.4"}
keycloak = {extras = ["extensions"], version = "^3.0.0"}
google-auth = "^1.30.0"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
psycopg2 = "^2.8.5"
diagrams = "^0.16.0"
alembic = "^1.4.2"
sphinx = "^3.2.1"
pulumi = {extras = ["gcp"], version = "^2.12.1"}
pulumi-gcp = "^4.1.0"
pulumi-kubernetes = "^2.6.3"
pulumi-random = "^2.4.0"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
